--- a/Views/Declare/DomesticBlc_List.cshtml
+++ b/Views/Declare/DomesticBlc_List.cshtml
@@ -52,14 +52,14 @@
                     <th data-options="field:'DECLWAY',width:100,sortable:true">报关方式</th>
                     <th data-options="field:'text',width:100,sortable:true">海关通关状态</th>
                     <th data-options="field:'text',width:100,sortable:true">关务状态</th>
+                    <th data-options="field:'BUSITYPE',width:100">业务类型</th>
                 </tr>
             </thead>
             <thead>
                 <tr>
                     <th data-options="field:'INSPSTATUS',width:100,sortable:true">报检状态</th>
                     <th data-options="field:'GOODSNUM',width:100,sortable:true">件数</th>
-                    <th data-options="field:'GOODSWEIGHT',width:100,sortable:true">重量</th>
-                    <th data-options="field:'BUSITYPE',width:100,sortable:true">业务类型</th>
+                    <th data-options="field:'GOODSWEIGHT',width:100,sortable:true">重量</th>                    
                     <th data-options="field:'GUANWUJIESHOUTIME',width:100,sortable:true">关务接受时间</th>
                     <th data-options="field:'BAORUHAIGUANTIME',width:100,sortable:true">报入海关时间</th>
                     <th data-options="field:'DANZHENGFANGXINGTIME',width:100,sortable:true">单证放行时间</th>
