--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -63,6 +63,7 @@
                     <th data-options="field:'text',width:80,sortable:true">报关单号</th>
                     <th data-options="field:'text',width:80,sortable:true">海关通关状态</th>
                     <th data-options="field:'text',width:80,sortable:true">关务状态</th>
+                    <th data-options="field:'BUSITYPE',width:100">业务类型</th>
                 </tr>
             </thead>
             <thead>
