--- a/Views/Inspect/OnelineIn_List.cshtml
+++ b/Views/Inspect/OnelineIn_List.cshtml
@@ -56,6 +56,7 @@
                     <th data-options="field:'text',sortable:true">报检单号</th>
                     <th data-options="field:'INSPSTATUS',sortable:true">报检状态</th>
                     <th data-options="field:'DECLSTATUS',sortable:true">报关状态</th>
+                    <th data-options="field:'BUSITYPE',width:100">业务类型</th>
                 </tr>
             </thead>
             <thead> 
@@ -80,7 +81,7 @@
                     <th data-options="field:'SHANDANKAISHITIME',sortable:true">删单时间</th>
                     <th data-options="field:'GAIDANKAISHITIME',sortable:true">改单时间</th>
                     <th data-options="field:'FWONO',sortable:true">FWO号</th>
-                    <th data-options="field:'FOONO',sortable:true">FO号</th>
+                    <th data-options="field:'FOONOBJ'">FOO报检服务号</th>
                     <th data-options="field:'CODE',sortable:true">业务编号</th>
                 </tr>
             </thead>
