--- a/Views/Declare/OnelineOut_List.cshtml
+++ b/Views/Declare/OnelineOut_List.cshtml
@@ -54,7 +54,7 @@
                     <th data-options="field:'text',width:100,sortable:true">报关单号</th>
                     <th data-options="field:'text',width:100,sortable:true">海关通关状态</th>
                     <th data-options="field:'text',width:100,sortable:true">关务状态</th>
-
+                    <th data-options="field:'BUSITYPE',width:100">业务类型</th>
                 </tr>
             </thead>
             <thead>
