--- a/Views/Inspect/DomesticKnot_List.cshtml
+++ b/Views/Inspect/DomesticKnot_List.cshtml
@@ -71,6 +71,7 @@
                     <th data-options="field:'CLEARANCENO',width:100,sortable:true">通关单号</th>
                     <th data-options="field:'INSPSTATUS',width:100,sortable:true">报检状态</th>
                     <th data-options="field:'DECLSTATUS',width:100,sortable:true">报关状态</th>
+                    <th data-options="field:'BUSITYPE',width:100">业务类型</th>
                 </tr>
             </thead>
             <thead>
@@ -87,8 +88,7 @@
                     <th data-options="field:'SHANDANKAISHITIME',width:100,sortable:true">删单时间</th>
                     <th data-options="field:'GAIDANKAISHITIME',width:100,sortable:true">改单时间</th>
                     <th data-options="field:'FWONO',width:180,sortable:true">FWO号</th>
-                    <th data-options="field:'FOONOBJ',width:180,sortable:true">FOO报检服务号</th>
-                    <th data-options="field:'BUSITYPE',width:100,sortable:true">业务类型</th>
+                    <th data-options="field:'FOONOBJ',width:180,sortable:true">FOO报检服务号</th>                   
                 </tr>
             </thead>
         </table>
