--- a/Views/Declare/DomesticBlc_List.cshtml
+++ b/Views/Declare/DomesticBlc_List.cshtml
@@ -46,17 +46,17 @@
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
                     <th data-options="field:'BUSIUNITNAME',width:200,sortable:true">进口企业</th>
                     <th data-options="field:'BUSIUNITNAME',width:200,sortable:true">出口企业</th>
-                    <th data-options="field:'text',width:100,sortable:true">报关单号</th>
-                    <th data-options="field:'text',width:100,sortable:true">出口报关单号</th>
-                    <th data-options="field:'CONTRACTNO',width:100,sortable:true">发票合同号</th>
-                    <th data-options="field:'DECLWAY',width:100,sortable:true">报关方式</th>
-                    <th data-options="field:'text',width:100,sortable:true">海关通关状态</th>
-                    <th data-options="field:'text',width:100,sortable:true">关务状态</th>
-                    <th data-options="field:'BUSITYPE',width:100">业务类型</th>
+                    <th data-options="field:'text',width:100">报关单号</th>
+                    <th data-options="field:'text',width:100">出口报关单号</th>
+                    <th data-options="field:'CONTRACTNO',width:100">发票合同号</th>
+                    <th data-options="field:'DECLWAY',width:70">报关方式</th>                          
                 </tr>
             </thead>
             <thead>
                 <tr>
+                    <th data-options="field:'text',width:100">海关通关状态</th>
+                    <th data-options="field:'text',width:100">关务状态</th>            
+                    <th data-options="field:'BUSITYPE',width:100">业务类型</th>
                     <th data-options="field:'INSPSTATUS',width:100,sortable:true">报检状态</th>
                     <th data-options="field:'GOODSNUM',width:100,sortable:true">件数</th>
                     <th data-options="field:'GOODSWEIGHT',width:100,sortable:true">重量</th>                    
