--- a/Views/Inspect/OnelineIn_List.cshtml
+++ b/Views/Inspect/OnelineIn_List.cshtml
@@ -51,38 +51,38 @@
             <thead data-options="frozen:true">
                 <tr>
                     <th data-options="field: 'ID',width:80,checkbox:true"></th>
-                    <th data-options="field:'BUSIUNITNAME',sortable:true,">收货人</th>
-                    <th data-options="field:'CLEARANCENO',sortable:true">通关单号</th>
-                    <th data-options="field:'text',sortable:true">报检单号</th>
-                    <th data-options="field:'INSPSTATUS',sortable:true">报检状态</th>
-                    <th data-options="field:'DECLSTATUS',sortable:true">报关状态</th>
+                    <th data-options="field:'BUSIUNITNAME',width:200,sortable:true,">收货人</th>
+                    <th data-options="field:'CLEARANCENO',width:100">通关单号</th>
+                    <th data-options="field:'text',width:100,sortable:true">报检单号</th>
+                    <th data-options="field:'INSPSTATUS',width:100,sortable:true">报检状态</th>
+                    <th data-options="field:'DECLSTATUS',width:100,sortable:true">报关状态</th>
                     <th data-options="field:'BUSITYPE',width:100">业务类型</th>
                 </tr>
             </thead>
             <thead> 
                 <tr>
-                    <th data-options="field:'GOODSNUM',sortable:true">总件数</th>
-                    <th data-options="field:'GOODSWEIGHT',sortable:true">总重量</th>
-                    <th data-options="field:'TOTALNO',sortable:true">总单号</th>
-                    <th data-options="field:'DIVIDENO',sortable:true">分单号</th>
-                    <th data-options="field:'FIRSTLADINGBILLNO',sortable:true">一程提单号</th>
-                    <th data-options="field:'SECONDLADINGBILLNO',sortable:true">二程提单号</th>
-                    <th data-options="field:'text',sortable:true">万达号</th>
-                    <th data-options="field:'MANIFEST',sortable:true">载货清单号</th>
-                    <th data-options="field:'CONTRACTNO',sortable:true">合同/发票号</th>
-                    <th data-options="field:'text',sortable:true">通关单标志</th>
-                    <th data-options="field:'text',sortable:true">通关单张数</th>
-                    <th data-options="field:'WOODPACKINGID',sortable:true">木质包装</th>
-                    <th data-options="field:'BAOJIANTIME',sortable:true">报检时间</th>
-                    <th data-options="field:'BAOJIANFANGXINGTIME',sortable:true">报检放行时间</th>
-                    <th data-options="field:'CHAYANZHILINGXIAFATIME',sortable:true">查验时间</th>
-                    <th data-options="field:'CHAYANFANGXINGTIME',sortable:true">查验放行时间</th>
-                    <th data-options="field:'XUNZHENGTIME',sortable:true">熏蒸时间</th>
-                    <th data-options="field:'SHANDANKAISHITIME',sortable:true">删单时间</th>
-                    <th data-options="field:'GAIDANKAISHITIME',sortable:true">改单时间</th>
-                    <th data-options="field:'FWONO',sortable:true">FWO号</th>
-                    <th data-options="field:'FOONOBJ'">FOO报检服务号</th>
-                    <th data-options="field:'CODE',sortable:true">业务编号</th>
+                    <th data-options="field:'GOODSNUM',width:100,sortable:true">总件数</th>
+                    <th data-options="field:'GOODSWEIGHT',width:100,sortable:true">总重量</th>
+                    <th data-options="field:'TOTALNO',width:100,sortable:true">总单号</th>
+                    <th data-options="field:'DIVIDENO',width:100,sortable:true">分单号</th>
+                    <th data-options="field:'FIRSTLADINGBILLNO',width:100,sortable:true">一程提单号</th>
+                    <th data-options="field:'SECONDLADINGBILLNO',width:100,sortable:true">二程提单号</th>
+                    <th data-options="field:'text',width:100,sortable:true">万达号</th>
+                    <th data-options="field:'MANIFEST',width:100,sortable:true">载货清单号</th>
+                    <th data-options="field:'CONTRACTNO',width:100,sortable:true">合同/发票号</th>
+                    <th data-options="field:'text',width:100,sortable:true">通关单标志</th>
+                    <th data-options="field:'text',width:100,sortable:true">通关单张数</th>
+                    <th data-options="field:'WOODPACKINGID',width:100,sortable:true">木质包装</th>
+                    <th data-options="field:'BAOJIANTIME',width:100,sortable:true">报检时间</th>
+                    <th data-options="field:'BAOJIANFANGXINGTIME',width:100,sortable:true">报检放行时间</th>
+                    <th data-options="field:'CHAYANZHILINGXIAFATIME',width:100,sortable:true">查验时间</th>
+                    <th data-options="field:'CHAYANFANGXINGTIME',width:100,sortable:true">查验放行时间</th>
+                    <th data-options="field:'XUNZHENGTIME',width:100,sortable:true">熏蒸时间</th>
+                    <th data-options="field:'SHANDANKAISHITIME',width:100,sortable:true">删单时间</th>
+                    <th data-options="field:'GAIDANKAISHITIME',width:100,sortable:true">改单时间</th>
+                    <th data-options="field:'FWONO',width:100,sortable:true">FWO号</th>
+                    <th data-options="field:'FOONOBJ',width:100">FOO报检服务号</th>
+                    <th data-options="field:'CODE',width:100,sortable:true">业务编号</th>
                 </tr>
             </thead>
         </table>
