--- a/Views/Abnormalmodule/Abnormallog.cshtml
+++ b/Views/Abnormalmodule/Abnormallog.cshtml
@@ -70,7 +70,7 @@
             pagination: true,
             remoteSort: false,
             nowrap: false,
-            fitColumns: true,
+            //fitColumns: true,
             view: detailview,
             detailFormatter: function (rowIndex, rowData) {
                 var ID = rowData.ID;
